sys/c-include/quickjs/quickjs.h

typedef struct JSRuntime JSRuntime;
typedef struct JSContext JSContext;
typedef uint32_t JSAtom;
/* JSValue consistency : it is not possible to run the code in this
  mode, but it is useful to detect simple reference counting
  errors. It would be interesting to modify a static C analyzer to
  handle specific annotations (clang has such annotations but only
  for objective C) */
typedef struct __JSValue* JSValue;
typedef const struct __JSValue* JSValueConst;
typedef uint64_t JSValue;
typedef union JSValueUnion {
  int32_t int32;
  double float64;
  void* ptr;
} JSValueUnion;
typedef struct JSValue {
  JSValueUnion u;
  int64_t tag;
} JSValue;
void *js_malloc_rt(JSRuntime *rt, size_t size);
void js_free_rt(JSRuntime *rt, void *ptr);
void *js_realloc_rt(JSRuntime *rt, void *ptr, size_t size);
size_t js_malloc_usable_size_rt(JSRuntime *rt, const void *ptr);
void *js_mallocz_rt(JSRuntime *rt, size_t size);
void *js_malloc(JSContext *ctx, size_t size);
void js_free(JSContext *ctx, void *ptr);
void *js_realloc(JSContext *ctx, void *ptr, size_t size);
size_t js_malloc_usable_size(JSContext *ctx, const void *ptr);
void *js_realloc2(JSContext *ctx, void *ptr, size_t size, size_t *pslack);
void *js_mallocz(JSContext *ctx, size_t size);
char *js_strdup(JSContext *ctx, const char *str);
char *js_strndup(JSContext *ctx, const char *s, size_t n);
typedef struct JSMemoryUsage {
  int64_t malloc_size, malloc_limit, memory_used_size;
  int64_t malloc_count;
  int64_t memory_used_count;
  int64_t atom_count, atom_size;
  int64_t str_count, str_size;
  int64_t obj_count, obj_size;
  int64_t prop_count, prop_size;
  int64_t shape_count, shape_size;
  int64_t js_func_count, js_func_size, js_func_code_size;
  int64_t js_func_pc2line_count, js_func_pc2line_size;
  int64_t js_func_pc2column_count, js_func_pc2column_size;
  int64_t c_func_count, array_count;
  int64_t fast_array_count, fast_array_elements;
  int64_t binary_object_count, binary_object_size;
} JSMemoryUsage;
void JS_ComputeMemoryUsage(JSRuntime *rt, JSMemoryUsage *s);
enum {
  __JS_ATOM_NULL = JS_ATOM_NULL,
#define DEF(name, str) JS_ATOM_ ## name,
#include "quickjs/quickjs-atom.h"
#undef DEF
  JS_ATOM_END,
};
JSAtom JS_NewAtomLen(JSContext *ctx, const char *str, size_t len);
JSAtom JS_NewAtom(JSContext *ctx, const char *str);
JSAtom JS_NewAtomUInt32(JSContext *ctx, uint32_t n);
JSAtom JS_DupAtom(JSContext *ctx, JSAtom v);
void JS_FreeAtom(JSContext *ctx, JSAtom v);
void JS_FreeAtomRT(JSRuntime *rt, JSAtom v);
JSValue JS_AtomToValue(JSContext *ctx, JSAtom atom);
JSValue JS_AtomToString(JSContext *ctx, JSAtom atom);
const char *JS_AtomToCString(JSContext *ctx, JSAtom atom);
JSAtom JS_ValueToAtom(JSContext *ctx, JSValueConst val);
/* object class support */

typedef struct JSPropertyEnum {
  JS_BOOL is_enumerable;
  JSAtom atom;
} JSPropertyEnum;
typedef struct JSPropertyDescriptor {
  int flags;
  JSValue value;
  JSValue getter;
  JSValue setter;
} JSPropertyDescriptor;
typedef struct JSClassExoticMethods {
  /* Return -1 if exception (can only happen in case of Proxy object),
     FALSE if the property does not exists, TRUE if it exists. If 1 is
     returned, the property descriptor 'desc' is filled if != NULL. */
  int (*get_own_property)(JSContext* ctx, JSPropertyDescriptor* desc, JSValueConst obj, JSAtom prop);
  /* '*ptab' should hold the '*plen' property keys. Return 0 if OK,
     -1 if exception. The 'is_enumerable' field is ignored.
  */
  int (*get_own_property_names)(JSContext* ctx, JSPropertyEnum** ptab, uint32_t* plen, JSValueConst obj);
  /* return < 0 if exception, or TRUE/FALSE */
  int (*delete_property)(JSContext* ctx, JSValueConst obj, JSAtom prop);
  /* return < 0 if exception or TRUE/FALSE */
  int (*define_own_property)(JSContext* ctx, JSValueConst this_obj, JSAtom prop, JSValueConst val, JSValueConst getter, JSValueConst setter, int flags);
  /* The following methods can be emulated with the previous ones,
     so they are usually not needed */
  /* return < 0 if exception or TRUE/FALSE */
  int (*has_property)(JSContext* ctx, JSValueConst obj, JSAtom atom);
  JSValue (*get_property)(JSContext* ctx, JSValueConst obj, JSAtom atom, JSValueConst receiver);
  /* return < 0 if exception or TRUE/FALSE */
  int (*set_property)(JSContext* ctx, JSValueConst obj, JSAtom atom, JSValueConst value, JSValueConst receiver, int flags);
} JSClassExoticMethods;