sys/src/bindings/i686-unknown-linux-gnu.rs

unsafe extern "C" {
    pub fn js_calloc_rt(
        rt: *mut JSRuntime,
        count: size_t,
        size: size_t,
    ) -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    pub fn js_malloc_rt(rt: *mut JSRuntime, size: size_t) -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    pub fn js_free_rt(rt: *mut JSRuntime, ptr: *mut ::std::os::raw::c_void);
}
unsafe extern "C" {
    pub fn js_realloc_rt(
        rt: *mut JSRuntime,
        ptr: *mut ::std::os::raw::c_void,
        size: size_t,
    ) -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    pub fn js_malloc_usable_size_rt(
        rt: *mut JSRuntime,
        ptr: *const ::std::os::raw::c_void,
    ) -> size_t;
}
unsafe extern "C" {
    pub fn js_mallocz_rt(rt: *mut JSRuntime, size: size_t) -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    pub fn js_calloc(
        ctx: *mut JSContext,
        count: size_t,
        size: size_t,
    ) -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    pub fn js_malloc(ctx: *mut JSContext, size: size_t) -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    pub fn js_free(ctx: *mut JSContext, ptr: *mut ::std::os::raw::c_void);
}
unsafe extern "C" {
    pub fn js_realloc(
        ctx: *mut JSContext,
        ptr: *mut ::std::os::raw::c_void,
        size: size_t,
    ) -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    pub fn js_malloc_usable_size(ctx: *mut JSContext, ptr: *const ::std::os::raw::c_void)
        -> size_t;
}
unsafe extern "C" {
    pub fn js_realloc2(
        ctx: *mut JSContext,
        ptr: *mut ::std::os::raw::c_void,
        size: size_t,
        pslack: *mut size_t,
    ) -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    pub fn js_mallocz(ctx: *mut JSContext, size: size_t) -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    pub fn js_strdup(
        ctx: *mut JSContext,
        str_: *const ::std::os::raw::c_char,
    ) -> *mut ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn js_strndup(
        ctx: *mut JSContext,
        s: *const ::std::os::raw::c_char,
        n: size_t,
    ) -> *mut ::std::os::raw::c_char;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JSMemoryUsage {
    pub malloc_size: i64,
    pub malloc_limit: i64,
    pub memory_used_size: i64,
    pub malloc_count: i64,
    pub memory_used_count: i64,
    pub atom_count: i64,
    pub atom_size: i64,
    pub str_count: i64,
    pub str_size: i64,
    pub obj_count: i64,
    pub obj_size: i64,
    pub prop_count: i64,
    pub prop_size: i64,
    pub shape_count: i64,
    pub shape_size: i64,
    pub js_func_count: i64,
    pub js_func_size: i64,
    pub js_func_code_size: i64,
    pub js_func_pc2line_count: i64,
    pub js_func_pc2line_size: i64,
    pub c_func_count: i64,
    pub array_count: i64,
    pub fast_array_count: i64,
    pub fast_array_elements: i64,
    pub binary_object_count: i64,
    pub binary_object_size: i64,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of JSMemoryUsage"][::std::mem::size_of::<JSMemoryUsage>() - 208usize];
    ["Alignment of JSMemoryUsage"][::std::mem::align_of::<JSMemoryUsage>() - 4usize];
    ["Offset of field: JSMemoryUsage::malloc_size"]
        [::std::mem::offset_of!(JSMemoryUsage, malloc_size) - 0usize];
    ["Offset of field: JSMemoryUsage::malloc_limit"]
        [::std::mem::offset_of!(JSMemoryUsage, malloc_limit) - 8usize];
    ["Offset of field: JSMemoryUsage::memory_used_size"]
        [::std::mem::offset_of!(JSMemoryUsage, memory_used_size) - 16usize];
    ["Offset of field: JSMemoryUsage::malloc_count"]
        [::std::mem::offset_of!(JSMemoryUsage, malloc_count) - 24usize];
    ["Offset of field: JSMemoryUsage::memory_used_count"]
        [::std::mem::offset_of!(JSMemoryUsage, memory_used_count) - 32usize];
    ["Offset of field: JSMemoryUsage::atom_count"]
        [::std::mem::offset_of!(JSMemoryUsage, atom_count) - 40usize];
    ["Offset of field: JSMemoryUsage::atom_size"]
        [::std::mem::offset_of!(JSMemoryUsage, atom_size) - 48usize];
    ["Offset of field: JSMemoryUsage::str_count"]
        [::std::mem::offset_of!(JSMemoryUsage, str_count) - 56usize];
    ["Offset of field: JSMemoryUsage::str_size"]
        [::std::mem::offset_of!(JSMemoryUsage, str_size) - 64usize];
    ["Offset of field: JSMemoryUsage::obj_count"]
        [::std::mem::offset_of!(JSMemoryUsage, obj_count) - 72usize];
    ["Offset of field: JSMemoryUsage::obj_size"]
        [::std::mem::offset_of!(JSMemoryUsage, obj_size) - 80usize];
    ["Offset of field: JSMemoryUsage::prop_count"]
        [::std::mem::offset_of!(JSMemoryUsage, prop_count) - 88usize];
    ["Offset of field: JSMemoryUsage::prop_size"]
        [::std::mem::offset_of!(JSMemoryUsage, prop_size) - 96usize];
    ["Offset of field: JSMemoryUsage::shape_count"]
        [::std::mem::offset_of!(JSMemoryUsage, shape_count) - 104usize];
    ["Offset of field: JSMemoryUsage::shape_size"]
        [::std::mem::offset_of!(JSMemoryUsage, shape_size) - 112usize];
    ["Offset of field: JSMemoryUsage::js_func_count"]
        [::std::mem::offset_of!(JSMemoryUsage, js_func_count) - 120usize];
    ["Offset of field: JSMemoryUsage::js_func_size"]
        [::std::mem::offset_of!(JSMemoryUsage, js_func_size) - 128usize];
    ["Offset of field: JSMemoryUsage::js_func_code_size"]
        [::std::mem::offset_of!(JSMemoryUsage, js_func_code_size) - 136usize];
    ["Offset of field: JSMemoryUsage::js_func_pc2line_count"]
        [::std::mem::offset_of!(JSMemoryUsage, js_func_pc2line_count) - 144usize];
    ["Offset of field: JSMemoryUsage::js_func_pc2line_size"]
        [::std::mem::offset_of!(JSMemoryUsage, js_func_pc2line_size) - 152usize];
    ["Offset of field: JSMemoryUsage::c_func_count"]
        [::std::mem::offset_of!(JSMemoryUsage, c_func_count) - 160usize];
    ["Offset of field: JSMemoryUsage::array_count"]
        [::std::mem::offset_of!(JSMemoryUsage, array_count) - 168usize];
    ["Offset of field: JSMemoryUsage::fast_array_count"]
        [::std::mem::offset_of!(JSMemoryUsage, fast_array_count) - 176usize];
    ["Offset of field: JSMemoryUsage::fast_array_elements"]
        [::std::mem::offset_of!(JSMemoryUsage, fast_array_elements) - 184usize];
    ["Offset of field: JSMemoryUsage::binary_object_count"]
        [::std::mem::offset_of!(JSMemoryUsage, binary_object_count) - 192usize];
    ["Offset of field: JSMemoryUsage::binary_object_size"]
        [::std::mem::offset_of!(JSMemoryUsage, binary_object_size) - 200usize];
};
unsafe extern "C" {
    pub fn JS_ComputeMemoryUsage(rt: *mut JSRuntime, s: *mut JSMemoryUsage);
}
unsafe extern "C" {
    pub fn JS_NewAtomLen(
        ctx: *mut JSContext,
        str_: *const ::std::os::raw::c_char,
        len: size_t,
    ) -> JSAtom;
}
unsafe extern "C" {
    pub fn JS_NewAtom(ctx: *mut JSContext, str_: *const ::std::os::raw::c_char) -> JSAtom;
}
unsafe extern "C" {
    pub fn JS_NewAtomUInt32(ctx: *mut JSContext, n: u32) -> JSAtom;
}
unsafe extern "C" {
    pub fn JS_DupAtom(ctx: *mut JSContext, v: JSAtom) -> JSAtom;
}
unsafe extern "C" {
    pub fn JS_FreeAtom(ctx: *mut JSContext, v: JSAtom);
}
unsafe extern "C" {
    pub fn JS_FreeAtomRT(rt: *mut JSRuntime, v: JSAtom);
}
unsafe extern "C" {
    pub fn JS_AtomToValue(ctx: *mut JSContext, atom: JSAtom) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_AtomToString(ctx: *mut JSContext, atom: JSAtom) -> JSValue;
}
unsafe extern "C" {
    pub fn JS_AtomToCString(ctx: *mut JSContext, atom: JSAtom) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn JS_ValueToAtom(ctx: *mut JSContext, val: JSValue) -> JSAtom;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JSPropertyEnum {
    pub is_enumerable: bool,
    pub atom: JSAtom,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of JSPropertyEnum"][::std::mem::size_of::<JSPropertyEnum>() - 8usize];
    ["Alignment of JSPropertyEnum"][::std::mem::align_of::<JSPropertyEnum>() - 4usize];
    ["Offset of field: JSPropertyEnum::is_enumerable"]
        [::std::mem::offset_of!(JSPropertyEnum, is_enumerable) - 0usize];
    ["Offset of field: JSPropertyEnum::atom"]
        [::std::mem::offset_of!(JSPropertyEnum, atom) - 4usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JSPropertyDescriptor {
    pub flags: ::std::os::raw::c_int,
    pub value: JSValue,
    pub getter: JSValue,
    pub setter: JSValue,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of JSPropertyDescriptor"][::std::mem::size_of::<JSPropertyDescriptor>() - 28usize];
    ["Alignment of JSPropertyDescriptor"][::std::mem::align_of::<JSPropertyDescriptor>() - 4usize];
    ["Offset of field: JSPropertyDescriptor::flags"]
        [::std::mem::offset_of!(JSPropertyDescriptor, flags) - 0usize];
    ["Offset of field: JSPropertyDescriptor::value"]
        [::std::mem::offset_of!(JSPropertyDescriptor, value) - 4usize];
    ["Offset of field: JSPropertyDescriptor::getter"]
        [::std::mem::offset_of!(JSPropertyDescriptor, getter) - 12usize];
    ["Offset of field: JSPropertyDescriptor::setter"]
        [::std::mem::offset_of!(JSPropertyDescriptor, setter) - 20usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JSClassExoticMethods {
    pub get_own_property: ::std::option::Option<
        unsafe extern "C" fn(
            ctx: *mut JSContext,
            desc: *mut JSPropertyDescriptor,
            obj: JSValue,
            prop: JSAtom,
        ) -> ::std::os::raw::c_int,
    >,
    pub get_own_property_names: ::std::option::Option<
        unsafe extern "C" fn(
            ctx: *mut JSContext,
            ptab: *mut *mut JSPropertyEnum,
            plen: *mut u32,
            obj: JSValue,
        ) -> ::std::os::raw::c_int,
    >,
    pub delete_property: ::std::option::Option<
        unsafe extern "C" fn(
            ctx: *mut JSContext,
            obj: JSValue,
            prop: JSAtom,
        ) -> ::std::os::raw::c_int,
    >,
    pub define_own_property: ::std::option::Option<
        unsafe extern "C" fn(
            ctx: *mut JSContext,
            this_obj: JSValue,
            prop: JSAtom,
            val: JSValue,
            getter: JSValue,
            setter: JSValue,
            flags: ::std::os::raw::c_int,
        ) -> ::std::os::raw::c_int,
    >,
    pub has_property: ::std::option::Option<
        unsafe extern "C" fn(
            ctx: *mut JSContext,
            obj: JSValue,
            atom: JSAtom,
        ) -> ::std::os::raw::c_int,
    >,
    pub get_property: ::std::option::Option<
        unsafe extern "C" fn(
            ctx: *mut JSContext,
            obj: JSValue,
            atom: JSAtom,
            receiver: JSValue,
        ) -> JSValue,
    >,
    pub set_property: ::std::option::Option<
        unsafe extern "C" fn(
            ctx: *mut JSContext,
            obj: JSValue,
            atom: JSAtom,
            value: JSValue,
            receiver: JSValue,
            flags: ::std::os::raw::c_int,
        ) -> ::std::os::raw::c_int,
    >,
}
